@@ -1,23 +1,10 @@
 package org.runningdinner.admin.message;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
-import java.time.LocalDate;
-import java.time.ZonedDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.Set;
-import java.util.UUID;
-
 import org.assertj.core.api.Condition;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.runningdinner.ApplicationConfig;
-import org.runningdinner.admin.message.job.FailureType;
-import org.runningdinner.admin.message.job.MessageJob;
-import org.runningdinner.admin.message.job.MessageTask;
-import org.runningdinner.admin.message.job.MessageTaskRepository;
-import org.runningdinner.admin.message.job.SendingStatus;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.runningdinner.admin.message.job.*;
 import org.runningdinner.admin.message.participant.ParticipantMessage;
 import org.runningdinner.admin.message.participant.ParticipantSelection;
 import org.runningdinner.core.NoPossibleRunningDinnerException;
@@ -29,26 +16,32 @@ import org.runningdinner.mail.mock.MailSenderMockInMemory;
 import org.runningdinner.mail.sendgrid.SuppressedEmail;
 import org.runningdinner.participant.Participant;
 import org.runningdinner.participant.ParticipantService;
+import org.runningdinner.test.util.ApplicationTest;
 import org.runningdinner.test.util.TestHelperService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.mail.SimpleMailMessage;
-import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.web.WebAppConfiguration;
+import org.springframework.test.context.TestPropertySource;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-@ActiveProfiles({"dev", "junit"})
-@SpringBootTest(
-  classes = { ApplicationConfig.class },
-  properties = {
-      "message.max-allowed-tasks-per-job=2",
-      "message.max-allowed-tasks-per-dinner=6",
-      
-      "deliver.feedback.mail.scheduler.enabled=false",
-      "delete.runninginnder.instances.scheduler.enabled=false",
-      "sendgrid.sync.sent.mails=false"
-    }
-)
-@WebAppConfiguration
+import java.time.LocalDate;
+import java.time.ZonedDateTime;
+import java.util.Collections;
+import java.util.List;
+import java.util.Set;
+import java.util.UUID;
+
+import static org.assertj.core.api.Assertions.assertThat;
+
+@ExtendWith(SpringExtension.class)
+@ApplicationTest
+@TestPropertySource(properties = {
+  "mail.smtp.enabled=false",
+  "message.max-allowed-tasks-per-job=2",
+  "message.max-allowed-tasks-per-dinner=6",
+  "deliver.feedback.mail.scheduler.enabled=false",
+  "delete.runninginnder.instances.scheduler.enabled=false",
+  "sendgrid.sync.sent.mails=false"
+})
 public class MessageAbuseSuspicionTest {
 
   private static final LocalDate DINNER_DATE = LocalDate.now().plusDays(7);
@@ -77,8 +70,7 @@ public class MessageAbuseSuspicionTest {
   
   @BeforeEach
   public void setUp() throws NoPossibleRunningDinnerException {
-
-    this.mailSenderInMemory = (MailSenderMockInMemory) mailSenderFactory.getMailSender(); // Test uses always this implementation
+    this.mailSenderInMemory = testHelperService.getMockedMailSender();
     this.mailSenderInMemory.setUp();
     this.mailSenderInMemory.addIgnoreRecipientEmail(CreateRunningDinnerInitializationService.DEFAULT_DINNER_CREATION_ADDRESS);
     this.runningDinner = testHelperService.createClosedRunningDinnerWithParticipants(DINNER_DATE, TOTAL_NUMBER_OF_PARTICIPANTS);
@@ -107,7 +99,7 @@ public class MessageAbuseSuspicionTest {
     assertThat(messageTasks).are(new Condition<>(m -> m.getSendingResult().getFailureType() == FailureType.ABUSE_SUSPICION, "Expected all to be of failure type ABUSE_SUSPICION"));
     assertThat(messageTasks).are(new Condition<>(m -> m.getSendingStatus() == SendingStatus.SENDING_FINISHED, "Expected all sending status to be finished"));
     
-    messageJob = messageTasks.get(0).getParentJob();
+    messageJob = messageTasks.getFirst().getParentJob();
     assertThat(messageJob.getSendingStatus()).isEqualTo(SendingStatus.SENDING_FINISHED);
     
     // Verify that only succeeded messageTasks are taken into account
@@ -125,12 +117,12 @@ public class MessageAbuseSuspicionTest {
     assertThat(messages).isNotEmpty();
     messageTasks = messageTaskRepository.findByParentJobIdOrderByCreatedAtAsc(messageJob.getId());
     assertThat(messageTasks).hasSize(1);
-    assertThat(messageTasks.get(0).getSendingResult().isDelieveryFailed()).isFalse(); // This means we succeeded
+    assertThat(messageTasks.getFirst().getSendingResult().isDelieveryFailed()).isFalse(); // This means we succeeded
   }
   
   private List<UUID> getFirstParticipantAsList() {
     List<Participant> participants = participantService.findParticipants(runningDinner.getAdminId(), false);
-    return Collections.singletonList(participants.get(0).getId());
+    return Collections.singletonList(participants.getFirst().getId());
   }
 
   private SuppressedEmail newSuppressedEmail() {
